package edu.uees.tutorias.cancelacion;

public record ResultadoCancelacion(boolean aceptada, String detalle) {
}
